kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-api2-service
spec:
  selector:
    app: test-api2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8181
