kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-api2-server-http-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://test-api2.gazi.edu.tr/, http://test-api2.gazi.edu.tr/"


spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test-api-go.gazi.edu.tr
      secretName: tls-secret
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-api2-service
                port:
                  number: 80
      host: test-api2.gazi.edu.tr
